vlib/v/checker/tests/multi_return_use_void_type_err.vv
fn main() {
	print('a'), print('b')
}
